bindata/assets/openshift-controller-manager/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: openshift-controller-manager
  name: controller-manager
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: serving-cert
  labels:
    prometheus: openshift-controller-manager
spec:
  selector:
    controller-manager: "true"
  ports:
  - name: https
    port: 443
    targetPort: 8443
